Adapt contribution #4043
This commit adapts the code contributed
in #4043 to be Java 8-compatible with the
v4 branch